--- a/_posts/2019-12-26-the-us-narrative-today.html
+++ b/_posts/2019-12-26-the-us-narrative-today.html
@@ -1743,107 +1743,107 @@ stories:
   domain: http://www.farmforum.net/
   link: https://www.farmforum.net/news/national/woman-delivers-packages-mistakenly-left-at-her-house/video_9c862218-e3ae-5cd8-96c3-def342470bc6.html
 images:
-- name: stories-new-65-144-800-500-0-max-0-1--1.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-new-65-144-800-500-0-max-0-1--1.jpg
-- name: amusement-park-amusement-park-2-matrix.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/amusement-park-amusement-park-2-matrix.jpg
-- name: oldcabin-store-blue-circuit.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldcabin-store-blue-circuit.jpg
-- name: stories-ellis-island-nazi-poster.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-ellis-island-nazi-poster.jpg
-- name: capital-battle-capitolbattle-crunch-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/capital-battle-capitolbattle-crunch-paper.jpg
-- name: trucksilo-trucksilo-colorful-dream.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/trucksilo-trucksilo-colorful-dream.jpg
-- name: legal-statue-legalstatue-crafty-painting.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/legal-statue-legalstatue-crafty-painting.jpg
-- name: 35201856153_61bc075e4b-nazi-invasion.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/35201856153_61bc075e4b-nazi-invasion.jpg
-- name: downtown-trucksilo-plentiful.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-trucksilo-plentiful.jpg
-- name: status-berlin-status-berlin-blue-circuit-5.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/status-berlin-status-berlin-blue-circuit-5.jpg
-- name: downtown-trucksilo-colorful-dream.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-trucksilo-colorful-dream.jpg
-- name: locked-up-steam-lock-up-steam-umberto-bocc.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/locked-up-steam-lock-up-steam-umberto-bocc.jpg
-- name: bf-skinner-old-building-and-cars_36680898846_o.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bf-skinner-old-building-and-cars_36680898846_o.jpg
-- name: christianity-christianity-under-construction-post-modern.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/christianity-christianity-under-construction-post-modern.jpg
-- name: server-racks-door-marcel-duchamp.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-racks-door-marcel-duchamp.jpg
-- name: old-door-lock-old-door-lock-monet-one.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-door-lock-old-door-lock-monet-one.jpg
-- name: old-granary-field-oldhouse-cinnamon-rolls.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-granary-field-oldhouse-cinnamon-rolls.jpg
-- name: catacombs-catacombs-smoking-cigarette.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/catacombs-catacombs-smoking-cigarette.jpg
-- name: oldhotel-oldhotel-cinnamon-rolls.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhotel-oldhotel-cinnamon-rolls.jpg
-- name: oldhousecars-house-old-cars-bright-sand.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhousecars-house-old-cars-bright-sand.jpg
-- name: soldier-kneeling-26304845730-d4e495e25f-o-far-away.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldier-kneeling-26304845730-d4e495e25f-o-far-away.jpg
-- name: old-church-oldchurch-pablo-blue.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-church-oldchurch-pablo-blue.jpg
-- name: server-cloud-server-racks-door-yellow-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-door-yellow-paper.jpg
-- name: rockingchair-rockingchair-dark-rain.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rockingchair-rockingchair-dark-rain.jpg
-- name: oldbarn-oldbarn-bright-sand.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldbarn-oldbarn-bright-sand.jpg
-- name: copper-circuit-IMG_7936.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-IMG_7936.jpg
-- name: razorcliff-razorcliff-really-hot.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/razorcliff-razorcliff-really-hot.jpg
-- name: copper-circuit-going-to-dowtown-los-angeles.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-going-to-dowtown-los-angeles.jpg
-- name: nyc-flag-nycflag-clean-view.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nyc-flag-nycflag-clean-view.jpg
-- name: christianity-christianity-under-construction-oily-mcoilface.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/christianity-christianity-under-construction-oily-mcoilface.jpg
-- name: ellis-island-ellisisland-creativity.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/ellis-island-ellisisland-creativity.jpg
-- name: rain-princess-container-several-colors-grey.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rain-princess-container-several-colors-grey.jpg
-- name: old-house-oldhouse-purple-pond.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-house-oldhouse-purple-pond.jpg
-- name: walled-garden-walled-garden-umberto-bocc.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/walled-garden-walled-garden-umberto-bocc.jpg
+- name: paris-paris-atari-asteroids.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/paris-paris-atari-asteroids.jpg
+- name: crypto-machine-bletchley-crypto-machine-bletchley-bright-sand.png
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crypto-machine-bletchley-crypto-machine-bletchley-bright-sand.png
+- name: nazi-invasion-going-to-dowtown-los-angeles.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-going-to-dowtown-los-angeles.jpg
+- name: aws-s3-stories-4882162452-fa3126b38d-b-spagetti-accident.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-4882162452-fa3126b38d-b-spagetti-accident.jpg
+- name: bordercrossing-bordercrossing-colorful-blocks.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bordercrossing-bordercrossing-colorful-blocks.jpg
+- name: gypsy-wagon-gypsywagon-dali-two.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gypsy-wagon-gypsywagon-dali-two.jpg
+- name: adam-smith-adam-smith-spagetti-accident.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/adam-smith-adam-smith-spagetti-accident.jpg
+- name: downtown-fredericksburg.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-fredericksburg.JPG
+- name: razorcliff-razorcliff-yellow-collage.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/razorcliff-razorcliff-yellow-collage.jpg
+- name: aws-s3-treeinhills-yellowtree-still-600.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-treeinhills-yellowtree-still-600.jpg
+- name: oldroad-old-road-rainbow-festival.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldroad-old-road-rainbow-festival.jpg
+- name: san-francisco-skyline-night-san-francisco-skyline-night-free-woman.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-skyline-night-san-francisco-skyline-night-free-woman.jpg
+- name: san-francisco-city-bridge-sf-city-bridge-atari-missle.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-city-bridge-sf-city-bridge-atari-missle.jpg
+- name: soldiers-talking-34536952486-52cd6bb1d1-h-light-dali.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldiers-talking-34536952486-52cd6bb1d1-h-light-dali.jpg
+- name: catacombs-catacombs-constitution.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/catacombs-catacombs-constitution.jpg
+- name: hollywood-building-hollywood-building-crunch-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/hollywood-building-hollywood-building-crunch-paper.jpg
+- name: old-door-lock-old-door-lock-smooth-ride.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-door-lock-old-door-lock-smooth-ride.jpg
+- name: aws-s3-stories-gargoyle-nd-paris-atari-missle.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-gargoyle-nd-paris-atari-missle.jpg
+- name: ellis-island-ellis-island-room-hot-spicy.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/ellis-island-ellis-island-room-hot-spicy.jpg
+- name: old-church-oldchurch-satan-red.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-church-oldchurch-satan-red.jpg
+- name: curtain-curtain-oily-mcoilface.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/curtain-curtain-oily-mcoilface.jpg
+- name: old-gas-pumps-oldgaspumps-dali-two.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-gas-pumps-oldgaspumps-dali-two.jpg
+- name: san-francisco-city-bridge-sf-city-bridge-atari-asteroids.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-city-bridge-sf-city-bridge-atari-asteroids.jpg
+- name: white-house-lawn-white-house-window-crafty-painting.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-lawn-white-house-window-crafty-painting.jpg
+- name: walled-garden-walled-garden-purple-pond.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/walled-garden-walled-garden-purple-pond.jpg
+- name: rain-princess-capital-records-building.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rain-princess-capital-records-building.jpg
+- name: stalin-time-seattle-looking-north.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stalin-time-seattle-looking-north.jpg
+- name: power-lines-power-lines-empty-space-blue-granite.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/power-lines-power-lines-empty-space-blue-granite.jpg
+- name: aws-s3-bluelake-bluelake-still.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-bluelake-bluelake-still.jpg
+- name: castle-on-hill-castle-on-hill-edinburgh-hot-spicy.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/castle-on-hill-castle-on-hill-edinburgh-hot-spicy.JPG
+- name: cargo-ship-cargo-ship-on-sea-wols.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/cargo-ship-cargo-ship-on-sea-wols.jpg
+- name: supreme-court-supremecourt-rainbow-festival.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/supreme-court-supremecourt-rainbow-festival.jpg
+- name: power-lines-power-lines-empty-space-creativity.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/power-lines-power-lines-empty-space-creativity.jpg
+- name: old-door-lock-old-door-lock-2-purple-storm.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-door-lock-old-door-lock-2-purple-storm.jpg
+- name: aws-s3-stories-castle-on-hill-edinburgh-blue-circuit.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-castle-on-hill-edinburgh-blue-circuit.JPG
+- name: amusement-park-amusement-park-2-green-zuma.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/amusement-park-amusement-park-2-green-zuma.jpg
+- name: fence-fence-hot-spicy.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fence-fence-hot-spicy.jpg
+- name: mediterranean-mediterranean-marcel-duchamp.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mediterranean-mediterranean-marcel-duchamp.jpg
+- name: wind-mills-windmills-blue-circuit.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/wind-mills-windmills-blue-circuit.jpg
+- name: bf-skinner-old-ship-waterfront-harbor.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bf-skinner-old-ship-waterfront-harbor.jpg
+- name: copper-circuit-light-rail-yellow-calif.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-light-rail-yellow-calif.jpg
 - name: san-francisco-city-bridge-sf-city-bridge-blue-circuit.jpg
   url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-city-bridge-sf-city-bridge-blue-circuit.jpg
-- name: white-house-lawn-white-house-lawn-space-pizza.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-lawn-white-house-lawn-space-pizza.jpg
-- name: powerlines-power.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/powerlines-power.jpg
-- name: beach-rocks-beach-rocks-currents-smooth-ride.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/beach-rocks-beach-rocks-currents-smooth-ride.jpg
-- name: ellis-island-ellis-island-room-diego-rivera1.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/ellis-island-ellis-island-room-diego-rivera1.jpg
-- name: razorcliff-razorcliff-dark-rain.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/razorcliff-razorcliff-dark-rain.jpg
-- name: braceros-domingo-ulloa-volkswagon-microbus-windows.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/braceros-domingo-ulloa-volkswagon-microbus-windows.jpg
-- name: machine-road-machine-road-atari-missle.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/machine-road-machine-road-atari-missle.jpg
-- name: beach-clouds-lifeguard-beachclouds-dali-two.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/beach-clouds-lifeguard-beachclouds-dali-two.jpg
-- name: abandonedbuildings_blue_electricity.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/abandonedbuildings_blue_electricity.jpg
-- name: blossombar-dry-skin-file-00-00-00-00.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/blossombar-dry-skin-file-00-00-00-00.jpg
-- name: los-angeles-from-observatory-losangeles-from-observatory-atari-asteroids.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/los-angeles-from-observatory-losangeles-from-observatory-atari-asteroids.jpg
-- name: crypto-machine-bletchley-crypto-machine-bletchley-yellow-paper.png
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crypto-machine-bletchley-crypto-machine-bletchley-yellow-paper.png
-- name: oldhotel-oldhotel-marcel-duchamp.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhotel-oldhotel-marcel-duchamp.jpg
-- name: bf-skinner-frosty-downtown-lights.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bf-skinner-frosty-downtown-lights.jpg
-- name: crow_crunch_paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crow_crunch_paper.jpg
-- name: bf-skinner-japanese-garden-tree.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bf-skinner-japanese-garden-tree.jpg
+- name: store-on-corner-store-yellow-collage.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/store-on-corner-store-yellow-collage.jpg
+- name: machine-road-machine-road-constitution.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/machine-road-machine-road-constitution.jpg
+- name: border-crossing-bordercrossing-cinnamon-rolls.png
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/border-crossing-bordercrossing-cinnamon-rolls.png
+- name: art-museum-art-museum-aqua.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/art-museum-art-museum-aqua.jpg
+- name: aws-s3-kerbypeak-kerbypeak-still-1200.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-kerbypeak-kerbypeak-still-1200.jpg
+- name: crypto-machine-bletchley-crypto-machine-bletchley-satan-red.png
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crypto-machine-bletchley-crypto-machine-bletchley-satan-red.png
+- name: soldiers-talking-34536952486-52cd6bb1d1-h-crafty-painting.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldiers-talking-34536952486-52cd6bb1d1-h-crafty-painting.jpg
+- name: stories-new-path-in-the-woods-black-white.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-new-path-in-the-woods-black-white.jpg
+- name: old-gas-pumps-oldgaspumps-satan-red.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-gas-pumps-oldgaspumps-satan-red.jpg
 ---
 'Grinch' Spreads Holiday Cheer At California Mall.&nbsp;Hot Doughnut Action And More Decent Brews At Happy Tap.&nbsp;Airport Asks Travelers To Arrive Early.&nbsp;Wealaka Chapter Celebrates 10th Year.&nbsp;After Netflix Show On Rare Illness, A New Family Bonds.&nbsp;Charles Ray Chuck Postel.&nbsp;Report Says Michigan Businesses Unprepared For Severe Weather, Climate Change.&nbsp;Woman Delivers Packages Mistakenly Left At Her House.&nbsp;
